# kevchess

./: pyproject.toml
src/kevchess/: lichess.py  mcts.py  node.py
tests/: test_kevchess.py
